# mqttbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README-packaging.md  README.md  cityflitzer.go  go.mod  go.sum  luftdaten.go  main.go  mqtt.go  nextbike.go
.github/workflows/: ci.yml
cityflitzer/: cityflitzer.go  cityflitzer_test.go
debian/DEBIAN/: control  postinst  prerm
debian/etc/mqttbot/: mqttbot.env
debian/lib/systemd/system/: mqttbot.service
middleware/: logger.go  request_id.go
nextbike/: nextbike.go  nextbike.json  nextbike_test.go
raid/: raid.go  raid_test.go  rebuilding.plist
src/: cityflitzer.rs  config.rs  ha_discovery.rs  hoymiles.rs  hoymiles_state.rs  main.rs  mqtt.rs  nextbike.rs  raid.rs
