[package]
name = "mqttbot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["clock"] }
futures = "0.3.28"
paho-mqtt = "0.12.1"
plist = "1.4.3"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
